# python-piscine

./: .gitignore  GUION_CHARLA.md  README.md  pyproject.toml  requirements.txt
data/raw/: calidad_aire_madrid.csv
notebooks/: 01_eda_limpio.ipynb  eda v1.4 definitivo.ipynb
scripts/: build_dataset.py  generate_sample_data.py
src/airemad/: __init__.py  clean.py  load.py  plots.py
tests/: test_clean.py
